# python_explore

./: PencilProgram.py  README.rst  pyproject.toml
pencilkatapython/: eraser.py  paper.py  pencil.py
tests/: test_Paper.py  test_eraser.py  test_pencil.py  test_pencilkatapython.py
