[tool.poetry]
name = "PencilKataPython"
version = "0.1.0"
description = "Doing a simple kata to practice the thing!"
authors = ["John MacGregor <jmacgregor@pillartechnology.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
